--- a/bibliography.bib
+++ b/bibliography.bib
@@ -92,6 +92,92 @@
 	year={2025}
 }
 
+@article{brooks2024video,
+	title={Video generation models as world simulators},
+	author={Brooks, Tim and Peebles, Bill and Holmes, Connor and DePue, Will and Guo, Yufei and Jing, Leo and Schnurr, David and Taylor, Joe and Luhman, Troy and Luhman, Eric and others},
+	journal={OpenAI Blog},
+	volume={1},
+	number={8},
+	pages={1},
+	year={2024}
+}
+
+@article{li2023snapfusion,
+	title={Snapfusion: Text-to-image diffusion model on mobile devices within two seconds},
+	author={Li, Yanyu and Wang, Huan and Jin, Qing and Hu, Ju and Chemerys, Pavlo and Fu, Yun and Wang, Yanzhi and Tulyakov, Sergey and Ren, Jian},
+	journal={Advances in Neural Information Processing Systems},
+	volume={36},
+	pages={20662--20678},
+	year={2023}
+}
+
+@inproceedings{chen2023speed,
+	title={Speed is all you need: On-device acceleration of large diffusion models via gpu-aware optimizations},
+	author={Chen, Yu-Hui and Sarokin, Raman and Lee, Juhyun and Tang, Jiuqiang and Chang, Chuo-Ling and Kulik, Andrei and Grundmann, Matthias},
+	booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+	pages={4651--4655},
+	year={2023}
+}
+
+@article{han2015deep,
+	title={Deep compression: Compressing deep neural networks with pruning, trained quantization and huffman coding},
+	author={Han, Song and Mao, Huizi and Dally, William J},
+	journal={arXiv preprint arXiv:1510.00149},
+	year={2015}
+}
+
+@article{PPCL,
+	title={Pluggable Pruning with Contiguous Layer Distillation for Diffusion Transformers},
+	author={Ma, Jian and Peng, Qirong and Zhu, Xujie and Xie, Peixing and Chen, Chen and Lu, Haonan},
+	journal={arXiv preprint arXiv:2511.16156},
+	year={2025}
+}
+
+@article{HierarchicalPrune,
+	title={HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models},
+	author={Kwon, Young D and Li, Rui and Li, Sijia and Li, Da and Bhattacharya, Sourav and Venieris, Stylianos I},
+	journal={arXiv preprint arXiv:2508.04663},
+	year={2025}
+}
+
+@article{EcoDiff,
+	title={Learnable Sparsity for Vision Generative Models},
+	author={Zhang, Yang and Jin, Er and Liang, Wenzhong and Dong, Yanfei and Khakzar, Ashkan and Torr, Philip and Stegmaier, Johannes and Kawaguchi, Kenji},
+	journal={arXiv preprint arXiv:2412.02852},
+	year={2024}
+}
+
+@article{FluxBit,
+	title={1.58-bit FLUX},
+	author={Yang, Chenglin and Liu, Celong and Deng, Xueqing and Kim, Dongwon and Mei, Xing and Shen, Xiaohui and Chen, Liang-Chieh},
+	journal={arXiv preprint arXiv:2412.18653},
+	year={2024}
+}
+
+@inproceedings{zhao2024mobilediffusion,
+	title={Mobilediffusion: Instant text-to-image generation on mobile devices},
+	author={Zhao, Yang and Xu, Yanwu and Xiao, Zhisheng and Jia, Haolin and Hou, Tingbo},
+	booktitle={European Conference on Computer Vision},
+	pages={225--242},
+	year={2024},
+	organization={Springer}
+}
+
+@misc{ruiz2023dreamboothfinetuningtexttoimage,
+	title={DreamBooth: Fine Tuning Text-to-Image Diffusion Models for Subject-Driven Generation}, 
+	author={Nataniel Ruiz and Yuanzhen Li and Varun Jampani and Yael Pritch and Michael Rubinstein and Kfir Aberman},
+	year={2023},
+	eprint={2208.12242},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV},
+	url={https://arxiv.org/abs/2208.12242}, 
+}
+@article{baldridge2024imagen,
+	title={Imagen 3},
+	author={Baldridge, Jason and Bauer, Jakob and Bhutani, Mukul and Brichtova, Nicole and Bunner, Andrew and Castrejon, Lluis and Chan, Kelvin and Chen, Yichang and Dieleman, Sander and Du, Yuqing and others},
+	journal={arXiv preprint arXiv:2408.07009},
+	year={2024}
+}
 @misc{EcoDiff,
 	title={Learnable Sparsity for Vision Generative Models}, 
 	author={Yang Zhang and Er Jin and Wenzhong Liang and Yanfei Dong and Ashkan Khakzar and Philip Torr and Johannes Stegmaier and Kenji Kawaguchi},
