--- a/glossary.tex
+++ b/glossary.tex
@@ -57,6 +57,13 @@
 	description={Central Kernal Alignment}
 }
 
+\newglossaryentry{VRAM}
+{
+	name=VRAM,
+	description={Video Random Access Memory}
+}
+
+
 \newglossaryentry{RMS}
 {
 	name=RMS,
