--- a/Methods_Models.tex
+++ b/Methods_Models.tex
@@ -2,11 +2,11 @@
 \section{Image Generation Models}
 In the following section, the models, namely Pixart-$\Sigma$ \cite{Pixart_s} and Flux.1-dev \cite{Flux}, which were used for the experiments in this work are described in detail.
 \subsection{Pixart-$\Sigma$}
-PixArt-$\Sigma$ \cite{Pixart_s}, the latest addition to the PixArt family \cite{Pixart_a, Pixart_d}, was developed to demonstrate that high-fidelity image generation can be achieved with significantly reduced training costs and model parameters. Pixart-$\Sigma$ is a further development of  Pixart-$\alpha$. Therefore, the shared architecture of Pixart-$\alpha$ and Pixart-$\Sigma$ is introduced first. Next, the key points for efficient training of Pixart-$\alpha$ are described, followed by the specific enhancements implemented in PixArt-$\Sigma$.
+PixArt-$\Sigma$ \cite{Pixart_s}, the latest addition to the PixArt family \cite{Pixart_a, Pixart_d}, was developed to demonstrate that high-fidelity image generation can be achieved with significantly reduced training costs and model parameters. Pixart-$\Sigma$ is a further development of  Pixart-$\alpha$. Therefore, the shared architecture of Pixart-$\alpha$ and Pixart-$\Sigma$ is introduced first. Next, the key points for efficient training of Pixart-$\alpha$ are described that are also of relevance for PixArt-$\Sigma$, followed by the specific enhancements implemented in PixArt-$\Sigma$.
 
 \subsubsection{Architecture }
-The architecture of Pixart-$\Sigma$ is based on the class-conditional diffusion transformer \gls{DiT}-XL/2 \cite{DiT} which contains 28 transformer blocks. The transformer blocks have primarily three inputs (see fig. \ref{Pixart_Übersicht}) which are described in the following. \\
-The first input is the \textbf{timestep} $t$ which is projected into a time embedding vector using a 256-frequency embedding, from which a \gls{MLP} extracts the global scale and shift parameters. They are used as input for the customized adaptive layer normalization called adaLN-single layer, which modulates the hidden states based on the time embedding. \\
+The shared architecture of PixArt-$\Sigma$ and PixArt-$\alpha$ is based on the class-conditional diffusion transformer \gls{DiT}-XL/2 \cite{DiT} which contains 28 transformer blocks. The transformer blocks have primarily three inputs (see fig. \ref{Pixart_Übersicht}) which are described in the following. \\
+The first input is the \textbf{timestep} $t$ which is projected into a time embedding vector using a 256-frequency embedding, from which a \gls{MLP} extracts the global scale and shift parameters. The global scale and shift parameters are used as input for the customized adaptive layer normalization called adaLN-single layer, which modulates the hidden states based on the time embedding. \\
  The second input is the \textbf{text prompt} that describes the content of the image. It is tokenized into 120 tokens in Pixart-$\alpha$, repsectively 300 tokens in Pixart-$\Sigma$, and encoded by the T5-XXL text encoder \cite{T5XXL}. A linear projection layer is then applied to reduce the high dimensional output from the T5-XXL encoder after which it is incorporated via cross-attention layers into the model. \\
   The third input is the \textbf{latent image} which is encoded via a pre-trained autoencoder, e.g. SDXL-VAE \cite{SDXL} in Pixart-$\Sigma$, transforming the image $(3,H,W)$ into latent space $(4, H/8, W/8)$. Patches of size $2\times2$ are extracted from the latent representation of the image and flattened into a sequence of visual tokens. Finally, 2D sine-cosine positional encoding is applied before feeding them as input to the transformer blocks.
 
@@ -18,7 +18,7 @@ The first input is the \textbf{timestep} $t$ which is projected into a time embe
 \end{figure}
 
 
-The main components of the diffusion model are the transformer blocks. They consist of four main parts, namely the self-attention layer, the cross-attention layer, the \gls{MLP} and the adaLN-single mechanism (see fig. \ref{TransformerBlock}). \\
+The main components of the diffusion model are the transformer blocks. They consist of four main parts, namely the multi-head self-attention layer, the multi-head cross-attention layer, the \gls{MLP} and the adaLN-single mechanism (see fig. \ref{TransformerBlock}). \\
 The \textbf{multi-head self-attention} layer allows the tokens to attend to each other and capture spatial relationships. It is embedded between time-dependent modulation layers at the beginning of the transformer block. \\
 The \textbf{multi-head cross-attention} layer incorporates text conditioning into the model to align the generated image with the text prompt and is placed between the self-attention and the \gls{MLP} layer. \\
 The \textbf{\gls{MLP}} processes each token individually to refine the features. Similar to the self-attention layer, it is positioned between modulation layers at the end of the transformer block. \\
@@ -54,7 +54,10 @@ The output of the final transformer block is modulated and processed by a linear
 \end{table}
 
 \subsubsection{Training Strategy}
-Pixart training proceeds in three distinct stages, explicitly decoupling the learning of pixel dependencies from text-concept alignment to improve training efficiency. First, the focus is on learning pixel dependencies to generate semantically meaningful images. To achieve this, the model is initialized with weights pre-trained on ImageNet \cite{ImageNet} using class-conditional generation. This pre-training provides a strong initialization for the visual distribution at a low computational cost. In a second step, the focus is on text alignment so that the model generates images that accurately reflects the text prompt. For this purpose, the SAM \cite{SAM} dataset was utilized with corresponding high-density prompts generated by the vision-language model LLaVA \cite{LLaVA}. Finally, the model undergoes finetuning on high-resolution and high-aesthetic qualtity images to refine visual details which was done on a data set that is not publicly accessible.
+Pixart training proceeds in three distinct stages, explicitly decoupling the learning of pixel dependencies from text-concept alignment to improve training efficiency.\\
+First, the focus is on learning pixel dependencies to generate semantically meaningful images. To achieve this, the model is initialized with weights pre-trained on ImageNet \cite{ImageNet} using class-conditional generation. This pre-training provides a strong initialization for the visual distribution at a low computational cost.\\
+ In a second step, the focus is on text alignment so that the model generates images that accurately reflect the text prompt. For this purpose, the SAM \cite{SAM} dataset was utilized with corresponding high-density prompts generated by the vision-language model LLaVA \cite{LLaVA}.\\
+  Finally, the model undergoes finetuning on high-resolution and high-aesthetic qualtity images to refine visual details which was done on a data set that is not publicly accessible.
 
 \subsubsection{PixArt-$\Sigma$ Enhancements }
 Pixart-$\Sigma$ is a further development of Pixart-$\alpha$ which is able to generate images at higher resolution, up to 4k, and of higher quality. In this process, the weights from Pixart-$\alpha$ are used as initialization for Pixart-$\Sigma$ introducing three main changes, namely a more powerful VAE, an improved dataset and a more efficient self-attention mechanism leveraging KV-compression.\\
@@ -65,7 +68,7 @@ Third, a compression technique for the KV tokens in the self-attention layers is
 	\text{Attention}(Q,K,V) = \text{softmax}\left( \frac{Q f_c(K)^T}{\sqrt{d_k}}\right) f_c(V)
 \end{equation} 
 with $f_c$ representing the compression operation. \\
-To conclude, Pixart-$\Sigma$ shows that leveraging a weaker model as a base for introduce improvements helps to accelerate the training process enormously. 
+To conclude, Pixart-$\Sigma$ shows that leveraging a weaker model as a base to introduce improvements helps to accelerate the training process enormously. 
 
 
 
@@ -73,10 +76,10 @@ To conclude, Pixart-$\Sigma$ shows that leveraging a weaker model as a base for 
 Flux.1-dev \cite{Flux} is a publicly available, guidance-distilled rectified flow model based on the commercial model Flux.1 \cite{Flux}. Due to the absence of a publication/paper describing the exact training process, the data set used and the specific design choices, the following section focuses on presenting the models's architecture.
 
 \subsubsection{Architecture}
-Flux.1-dev is based on a multi-modal diffusion transformer (\gls{MMDiT}) \cite{SD3} architecture containing 19 double-stream blocks followed by 38 single-stream blocks (see fig. \ref{FluxOverview}) adding up to a total of 11.9 billion parameters (see tab. \ref{Flux_parameter_count}). For prompt processing,  it leverages two distinct text encoders, namely CLIP ViT-L/14 \cite{CLIP} and T5-XXL \cite{T5XXL}. For image encoding a \gls{VAE} is used compressing the height $H$ and width $W$ of the image by a factor of eight. Each double-stream block has mainly four inputs: a guidance vector, the positional information of the image patches and the text tokens as well as the text and the image hidden states. Hereby, the text and the image are processed seperately in two distinct streams allwoing the model to apply modality-specific weights. This dual-path approach is the defining characteristic of a \gls{MMDiT}. In contrast, the single-stream blocks have only three inputs as they combine the text and image hidden states and process them together.  \\
+Flux.1-dev is based on a multi-modal diffusion transformer (\gls{MMDiT}) \cite{SD3} architecture containing 19 double-stream blocks followed by 38 single-stream blocks (see fig. \ref{FluxOverview}) adding up to a total of 11.9 billion parameters (see tab. \ref{tab:Flux_parameter_count}). For prompt processing,  it leverages two distinct text encoders, namely CLIP ViT-L/14 \cite{CLIP} and T5-XXL \cite{T5XXL}. For image encoding a \gls{VAE} is used compressing the height $H$ and width $W$ of the image by a factor of eight. Each double-stream block has mainly four inputs: a guidance vector, the positional information of the image patches as well as the text and the image hidden states. Hereby, the text and the image are processed seperately in two distinct streams allwoing the model to apply modality-specific weights. This dual-path approach is the defining characteristic of a \gls{MMDiT}. In contrast, the single-stream blocks have only three inputs as they combine the text and image hidden states and process them together.  \\
 
 The \textbf{guidance vector} is a combination of the timestep, a guidance parameter and the pooled vector of the clip embedding. In guidance distillation, the model is trained to simulate classifier free guidance internally. This speeds up the inference process because in contrast to classifier free guidance where the model is applied twice per inference step only one inference pass per step is needed. The guidance is a scalar which corresponds to the guidance scale in standard classifier free guidance. First, the guidance parameter and the timestep are embedded via \gls{MLP}s  into high dimensional tensors which are summed together. Then the pooled clip vector for the text prompt is embedded via another MLP and added. The resulting vector, called guidance vector, is injected via modulation in every double-stream and every single-stream block. \\
-Another input to both block types is the concatenated \textbf{positional encoding} for the text prompt and the image. First, based on the latent representation of the image, 3D coordinates for the position of every patch in the image is created. The 3D vector for the image represents the 2D positional IDs $(x,y)$ of the patch in the image and a time dimension $t$ for the possibility to adapt Flux.1-dev for videos. However, for image generation the time dimension is always set to zero. Text position IDs are included for architectural consistency but are initialized to zero, as text tokens lack meaningful 2D spatial coordinates in a latent image grid. In contrast to Pixart models, Flux.1-dev uses rotary positional embedding (\gls{RoPE}) \cite{RoPE}. The embedded vector is then used in the attention mechanism to rotate the key and query vectors such as the spatial relationships within the image and the sequential structure of the text are preserved. \\
+Another input to both block types is the concatenated \textbf{positional encoding} for the text prompt and the image. First, based on the latent representation of the image, 3D coordinates for the position of every patch in the image are created. The 3D vector for the image represents the 2D positional IDs $(x,y)$ of the patch in the image and a time dimension $t$ for the possibility to adapt Flux.1-dev for videos. However, for image generation the time dimension is always set to zero. Text position IDs are included for architectural consistency but are initialized to zero, as text tokens lack meaningful 2D spatial coordinates in a latent image grid. In contrast to Pixart models, Flux.1-dev uses rotary positional embedding (\gls{RoPE}) \cite{RoPE}. The embedded vector is then used in the attention mechanism to rotate the key and query vectors such as the spatial relationships within the image and the sequential structure of the text are preserved. \\
 For the text embedding, the \textbf{text prompt} is tokenized into $512$ tokens such that the model is  capable of processing long and detailed prompts. The T5-XXL encoder embeds the tokens into high-dimensional vectors $(1,512,4096)$ and a linear projection is applied before it is fed into the first double-stream block. The following double-stream blocks always receive the hidden states of the text from the previous block. \\
 The \textbf{image} $(3,H,W)$ is encoded via \gls{VAE} to a latent representation $(16,h=\frac{H}{8}, w=\frac{W}{8})$. To prepare the latents for the transformer, Flux.1-dev packs $2 \times 2$ neighboring latent pixels into a single patch and therefore increasing the dimension from $16$ to $64$ during the patchify operation while simultaneously reducing the sequence length $N$ to $\frac{h}{2} \cdot \frac{w}{2}$ $(1,N=\frac{h}{2} \cdot \frac{w}{2}, 64)$. These patches are then linearly projected into a higher dimensional embedding space before being fed into the first double block.  \\
 The output, sepcifically the text and image hidden states, of the 19th double-stream block  are concatenated and used as single input to the first single-stream block.
