--- a/bibliography.bib
+++ b/bibliography.bib
@@ -102,6 +102,123 @@
 	year={2024}
 }
 
+@article{he2023efficientdm,
+	title={Efficientdm: Efficient quantization-aware fine-tuning of low-bit diffusion models},
+	author={He, Yefei and Liu, Jing and Wu, Weijia and Zhou, Hong and Zhuang, Bohan},
+	journal={arXiv preprint arXiv:2310.03270},
+	year={2023}
+}
+
+@article{esser2019learned,
+	title={Learned step size quantization},
+	author={Esser, Steven K and McKinstry, Jeffrey L and Bablani, Deepika and Appuswamy, Rathinakumar and Modha, Dharmendra S},
+	journal={arXiv preprint arXiv:1902.08153},
+	year={2019}
+}
+
+@article{bengio2013estimating,
+	title={Estimating or propagating gradients through stochastic neurons for conditional computation},
+	author={Bengio, Yoshua and L{\'e}onard, Nicholas and Courville, Aaron},
+	journal={arXiv preprint arXiv:1308.3432},
+	year={2013}
+}
+
+@article{han2015deep,
+	title={Deep compression: Compressing deep neural networks with pruning, trained quantization and huffman coding},
+	author={Han, Song and Mao, Huizi and Dally, William J},
+	journal={arXiv preprint arXiv:1510.00149},
+	year={2015}
+}
+
+@misc{lefaudeux2022xformers,
+	author       = {B. Lefaudeux and F. Massa and D. Liskovich and W. Xiong and V. Caggiano and S. Naren and M. Xu and J. Hu and M. Tintore and S. Zhang and P. Labatut and D. Haziza and L. Wehrstedt and J. Reizenstein and G. Sizov},
+	title        = {xformers: A modular and hackable transformer modelling library},
+	howpublished = {\url{https://github.com/facebookresearch/xformers}},
+	year         = {2022}
+}
+
+@article{BF16,
+	title={A study of BFLOAT16 for deep learning training},
+	author={Kalamkar, Dhiraj and Mudigere, Dheevatsa and Mellempudi, Naveen and Das, Dipankar and Banerjee, Kunal and Avancha, Sasikanth and Vooturi, Dharma Teja and Jammalamadaka, Nataraj and Huang, Jianyu and Yuen, Hector and others},
+	journal={arXiv preprint arXiv:1905.12322},
+	year={2019}
+}
+
+@article{li2024svdquant,
+	title={Svdquant: Absorbing outliers by low-rank components for 4-bit diffusion models},
+	author={Li, Muyang and Lin, Yujun and Zhang, Zhekai and Cai, Tianle and Li, Xiuyu and Guo, Junxian and Xie, Enze and Meng, Chenlin and Zhu, Jun-Yan and Han, Song},
+	journal={arXiv preprint arXiv:2411.05007},
+	year={2024}
+}
+
+@inproceedings{nagel2020up,
+	title={Up or down? adaptive rounding for post-training quantization},
+	author={Nagel, Markus and Amjad, Rana Ali and Van Baalen, Mart and Louizos, Christos and Blankevoort, Tijmen},
+	booktitle={International conference on machine learning},
+	pages={7197--7206},
+	year={2020},
+	organization={PMLR}
+}
+
+@article{so2023temporal,
+	title={Temporal dynamic quantization for diffusion models},
+	author={So, Junhyuk and Lee, Jungwon and Ahn, Daehyun and Kim, Hyungjun and Park, Eunhyeok},
+	journal={Advances in neural information processing systems},
+	volume={36},
+	pages={48686--48698},
+	year={2023}
+}
+
+@article{he2023ptqd,
+	title={Ptqd: Accurate post-training quantization for diffusion models},
+	author={He, Yefei and Liu, Luping and Liu, Jing and Wu, Weijia and Zhou, Hong and Zhuang, Bohan},
+	journal={Advances in Neural Information Processing Systems},
+	volume={36},
+	pages={13237--13249},
+	year={2023}
+}
+
+@inproceedings{jacob2018quantization,
+	title={Quantization and training of neural networks for efficient integer-arithmetic-only inference},
+	author={Jacob, Benoit and Kligys, Skirmantas and Chen, Bo and Zhu, Menglong and Tang, Matthew and Howard, Andrew and Adam, Hartwig and Kalenichenko, Dmitry},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={2704--2713},
+	year={2018}
+}
+
+@inproceedings{cai2020zeroq,
+	title={Zeroq: A novel zero shot quantization framework},
+	author={Cai, Yaohui and Yao, Zhewei and Dong, Zhen and Gholami, Amir and Mahoney, Michael W and Keutzer, Kurt},
+	booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+	pages={13169--13178},
+	year={2020}
+}
+
+@inproceedings{QDiT,
+	title={Q-dit: Accurate post-training quantization for diffusion transformers},
+	author={Chen, Lei and Meng, Yuan and Tang, Chen and Ma, Xinzhu and Jiang, Jingyan and Wang, Xin and Wang, Zhi and Zhu, Wenwu},
+	booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
+	pages={28306--28315},
+	year={2025}
+}
+
+@inproceedings{QDiffusion,
+	title={Q-diffusion: Quantizing diffusion models},
+	author={Li, Xiuyu and Liu, Yijiang and Lian, Long and Yang, Huanrui and Dong, Zhen and Kang, Daniel and Zhang, Shanghang and Keutzer, Kurt},
+	booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+	pages={17535--17545},
+	year={2023}
+}
+
+@article{PTQD,
+	title={Ptqd: Accurate post-training quantization for diffusion models},
+	author={He, Yefei and Liu, Luping and Liu, Jing and Wu, Weijia and Zhou, Hong and Zhuang, Bohan},
+	journal={Advances in Neural Information Processing Systems},
+	volume={36},
+	pages={13237--13249},
+	year={2023}
+}
+
 @article{li2023snapfusion,
 	title={Snapfusion: Text-to-image diffusion model on mobile devices within two seconds},
 	author={Li, Yanyu and Wang, Huan and Jin, Qing and Hu, Ju and Chemerys, Pavlo and Fu, Yun and Wang, Yanzhi and Tulyakov, Sergey and Ren, Jian},
