--- a/glossary.tex
+++ b/glossary.tex
@@ -63,6 +63,29 @@
 	description={Video Random Access Memory}
 }
 
+\newglossaryentry{PTQ}
+{
+	name=PTQ,
+	description={Post-Training Quantization}
+}
+
+\newglossaryentry{QAT}
+{
+	name=QAT,
+	description={Quantizaiton-Aware Training}
+}
+
+\newglossaryentry{PTQD}
+{
+	name=PTQD,
+	description={Post-Training Quantization for Diffusion Models}
+}
+
+\newglossaryentry{STE}
+{
+	name=STE,
+	description={Straight-Through Estimator}
+}
 
 \newglossaryentry{RMS}
 {
