--- a/Related_Work.tex
+++ b/Related_Work.tex
@@ -60,3 +60,18 @@ Furthermore, modern models such as Flux.1-dev are standardly deployed using 16-b
  A third option for reducing VRAM consumption is to load only the currently active layers into the VRAM (GPU), leaving the rest of the model in the RAM (CPU). This results in slower inference and training, as there is overhead involved in moving the model components to the VRAM and back to the RAM. 
  
  \subsubsection{Model Pruning}
+ Model pruning focuses on reducing the actual parameter count of models. It can be disected in mainly two categories: structural and unstrcutural model pruning. In unstructural model pruning individual, less important neurons across the model's architecture are identified, e.g. magnitude-based selection, and are masked out and do not contribute anymore to the inference process. The process to identify neurons to prune can be based on a metric, e.g. magnitude based pruning, or they can be chosen at random. While this allows to remove many neurons by maintaining high performance, it does not necessarily reduces the \gls{VRAM} consumption during inference as the weight matrices are sparsified but keep their original physical shape and dimensions. To actually achieve a reduction in \gls{VRAM} consumption the pruned, sparse matrices needs to be converted into a sparse tensor format, e.g. compressed sparse row (CSR) which stores the non-zero entries and its coordinates which lead to a memory overhead contradicting the efforts to reduce \gls{VRAM}. Therefore, a high degree of sparsity is required to compensate for the overhead and ensure low memory requirements. Moreover, modern GPUs are highly optimized for dense matrix mutliplication which is why running inference with sparse tensor on standard hardware is slower than using dense matrix multiplication. Nevertheless there are emerging custom kernels and specialized hardware to accelerate unstructured sparsity. \\
+ This master thesis focuses on the second pruning method, namely structured pruning for transformer-based diffusion and flow models. Unlike unstructured pruning, this method targets coherent model components, such as attention heads, channels, or entire transformer blocks. To recover degraded performance and lost generation capabilities, most methods subsequently apply retraining, specifically knowledge distillation.\\
+ Based on the modification strategy the literature can be divided into two main categories, namely approaches that remove model components entirely and those which compresses them.  \\
+Most research on compressing Unet-based diffusion models, such as SDXL \cite{SDXL}, adopts the approach of structual component removal  \cite{Koala,Laptop,Bksdm,ProgressiveDistillation,tang2023lightweight}, yet differs significantly in pruning granularity. For instance, \cite{Bksdm} removed predominantly entire middle transformer blocks from the SDXL architecture, identifying them as highly redundant. In contrast, \cite{Laptop} focused on pruning individual transformer layers within the blocks, whereas \cite{Koala} employed a hybrid strategy that combines block removal with layer-wise pruning for higher compression ratios. Notably, \cite{Koala} observed that the decoder plays a more critical role than the encoder of the U-Net for the generation process and should therefore be subject to less aggressive compression.
+ To recover the model's fidelity after pruning, most approaches leverage knowledge distillation \cite{KnowledgeDistillation} to retrain their pruned models. They mainly employ the unpruned model as a teacher to guide the recovery process of the pruned student model. Adressing optimization challenges in this phase, \cite{Laptop} demonstrated that using normalized features loss terms is advantageous as the magnitude of individual features from different layers may vary significantly. Furthermore, \cite{ProgressiveDistillation} demonstrated that a progressive pruning schedule for SDXL leads to superior results compared to one-shot pruning. \\
+ Recently, the landscape of diffusion models has shifted from U-Net to purely transformer-based architectures where compression methods become increasingly critical due to the steep increase in model size. The primary advantage of these architectures is their dimensional homogeneity.  Unlike U-Net architectures which may require down- or upsampling and channel adjustements, entire transformer blocks can be removed without adjusting the feature dimension. Besides straightforward transformer block removal strategies \cite{flux1-lite, flux_mini_2024,TinyFusion}, several compression techniques have been proposed using a hybrid depth- and width-pruning paradigma \cite{PPCL,HierarchicalPrune}. Regarding depth reduction, complete transformer blocks are removed. To simultaneously address width \cite{PPCL} identified that especially the text-stream and the \gls{MLP}s of both streams exhibit high redundancy and replaced them with lightweight linear layers. Similarly, \cite{FastFlux} proposes replacing blocks with linear layers and instead of performing a full model fine-tuning only \gls{LoRA}s on the preceding and subsequent blocks are trained to mitigate the performance loss.\\
+ In a distinct approach, \cite{Dense2MoE} leverages a mixture-of-expert (\gls{MoE}) framework to dynamically activate only a small fraction of the model's parameters during each inference step. The core advantage of this approach is that it exploits the temporal variability of feature importance, recognizing that different transformer blocks are citical at different timesteps. Their routing mechanism adaptively selects the most important blocks and experts for the current time step, making the model more expressive than standard static pruning methods. However, while the reduction in activated parameters per inference step significantly accelerates inference, it does not necessarily alleviate the \gls{VRAM} consumption bottleneck. Crucially, since the complete model (including both activated and inactivated parameters) typically remains in memory, the total memory footprint remains closte to the original model size, which distinguishes this method significantly from memory-focused pruning methods.\\
+ Finally, a distinct category of component compression is low-rank factorizaiton, commonly implemented via singular value decomposition (\gls{SVD}). This method approximates a dense weight matrix by decomposing it into products of two low-rank matrices, effectively reducing the parameter count while preserving the original architectural topology.  \\
+In the domain of \gls{LLM} \gls{SVD} has been extensively investigated as static post-training compression strategy \cite{DLowRankEst,wang2025svd}. However, the straightforward application of \gls{SVD} has proven to lead to significant performance drops even at low compression ratios, since \gls{LLM}s exhibit massive activation outliers and \gls{SVD} removes components critical for these activations as the singular value selection is solely based on their magnitude \cite{yuan2023asvd,GRASP}. \\
+In this work, \gls{SVD} is revisited within the context of diffusion and flow models. Unlike the zero-shot compression often applied in \gls{LLM}s, \gls{SVD} is identified as a highly-effective initialization strategy for compressed model weight matrices before retraining. This work demonstrates that a progressive linear compression scheme utilizing \gls{SVD} can effectively compress Flux.1-dev, outperforming \gls{SOTA} pruning approaches on several benchmarks. In addition, it is demonstrated that \gls{SVD} can be effectively deployed as a training-free compression approach for moderate compression ratios while maintaining acceptable performance and that \cite{GRASP} can be transfered from \gls{LLM}s to flow models like Flux.1-dev.
+ 
+ \subsubsection{Making Faster}
+ 
+ 
+ Caching
