--- a/bibliography.bib
+++ b/bibliography.bib
@@ -102,6 +102,14 @@
 	year={2024}
 }
 
+@inproceedings{DLowRankEst,
+	title={Dynamic Low-Rank Estimation for Transformer-based Language Models},
+	author={Hua, Ting and Li, Xiao and Gao, Shangqian and Hsu, Yen-Chang and Shen, Yilin and Jin, Hongxia},
+	booktitle={Findings of the Association for Computational Linguistics: EMNLP 2023},
+	pages={9275--9287},
+	year={2023}
+}
+
 @article{he2023efficientdm,
 	title={Efficientdm: Efficient quantization-aware fine-tuning of low-bit diffusion models},
 	author={He, Yefei and Liu, Jing and Wu, Weijia and Zhou, Hong and Zhuang, Bohan},
@@ -123,18 +131,49 @@
 	year={2013}
 }
 
+@article{tang2023lightweight,
+	title={Lightweight diffusion models with distillation-based block neural architecture search},
+	author={Tang, Siao and Wang, Xin and Chen, Hong and Guan, Chaoyu and Tang, Yansong and others},
+	journal={arXiv preprint arXiv:2311.04950},
+	year={2023}
+}
+
+@article{yuan2023asvd,
+	title={{ASVD}: Activation-aware Singular Value Decomposition for Compressing Large Language Models},
+	author={Yuan, Zhihang and Shang, Yuzhang and Song, Yue and Yang, Dawei and Wu, Qiang and Yan, Yan and Sun, Guangyu},
+	journal={arXiv preprint arXiv:2312.05821},
+	year={2023}
+}
+
+@inproceedings{GRASP,
+	title={{GRASP}: Replace Redundant Layers with Adaptive Singular Parameters for Efficient Model Compression},
+	author={Liu, Kainan and Zhang, Yong and Cheng, Ning and Li, Zhitao and Wang, Shaojun and Xiao, Jing},
+	booktitle={Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing},
+	pages={26344--26359},
+	year={2025}
+}
+
+
+@inproceedings{wang2025svd,
+	title={{SVD-LLM} v2: Optimizing Singular Value Truncation for Large Language Model Compression},
+	author={Wang, Xin and Alam, Samiul and Wan, Zhongwei and Shen, Hui and Zhang, Mi},
+	booktitle={Proceedings of the 2025 Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)},
+	pages={4287--4296},
+	year={2025}
+}
+
 @article{han2015deep,
-	title={Deep compression: Compressing deep neural networks with pruning, trained quantization and huffman coding},
-	author={Han, Song and Mao, Huizi and Dally, William J},
+	title={Deep Compression: Compressing Deep Neural Networks with Pruning, Trained Quantization and Huffman Coding},
+	author={Han, Song and Mao, Huizi and Dally, William J.}, 
 	journal={arXiv preprint arXiv:1510.00149},
 	year={2015}
 }
 
 @misc{lefaudeux2022xformers,
-	author       = {B. Lefaudeux and F. Massa and D. Liskovich and W. Xiong and V. Caggiano and S. Naren and M. Xu and J. Hu and M. Tintore and S. Zhang and P. Labatut and D. Haziza and L. Wehrstedt and J. Reizenstein and G. Sizov},
-	title        = {xformers: A modular and hackable transformer modelling library},
+	author = {Lefaudeux, B. and Massa, F. and Liskovich, D. and Xiong, W. and Caggiano, V. and Naren, S. and Xu, M. and Hu, J. and Tintore, M. and Zhang, S. and Labatut, P. and Haziza, D. and Wehrstedt, L. and Reizenstein, J. and Sizov, G.},
+	title = {xFormers: A Modular and Hackable Transformer Modelling Library},
 	howpublished = {\url{https://github.com/facebookresearch/xformers}},
-	year         = {2022}
+	year = {2022}
 }
 
 @article{BF16,
