--- a/glossary.tex
+++ b/glossary.tex
@@ -69,6 +69,12 @@
 	description={Post-Training Quantization}
 }
 
+\newglossaryentry{MoE}
+{
+	name=MoE,
+	description={Mixture-of-Expert}
+}\\
+
 \newglossaryentry{QAT}
 {
 	name=QAT,
